feat: Add File Chat tool and update dependencies
Introduces a new "File Chat" tool to the application, allowing users to interact with documents.
Updates various dependencies to their latest versions, including `@supabase/supabase-js`, `recharts`, `react-markdown`, and `remark-gfm`.
Adds `pdfjs-dist` to handle PDF rendering.
Includes an "Upload" icon for the new tool and updates the `AppTool` enum and sidebar navigation.

--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
     "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.1",
     "react-markdown": "https://aistudiocdn.com/react-markdown@^10.1.0",
     "remark-gfm": "https://aistudiocdn.com/remark-gfm@^4.0.1",
-    "react-dom": "https://aistudiocdn.com/react-dom@^19.2.0"
+    "react-dom": "https://aistudiocdn.com/react-dom@^19.2.0",
+    "pdfjs-dist": "https://aistudiocdn.com/pdfjs-dist@^5.4.394"
   }
 }
 </script>
