--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
     "react-markdown": "https://aistudiocdn.com/react-markdown@^10.1.0",
     "remark-gfm": "https://aistudiocdn.com/remark-gfm@^4.0.1",
     "react-dom": "https://aistudiocdn.com/react-dom@^19.2.0",
-    "pdfjs-dist": "https://aistudiocdn.com/pdfjs-dist@^5.4.394"
+    "pdfjs-dist": "https://aistudiocdn.com/pdfjs-dist@^5.4.394",
+    "date-fns": "https://aistudiocdn.com/date-fns@^4.1.0"
   }
 }
 </script>
