--- a/index.html
+++ b/index.html
@@ -60,19 +60,19 @@
 <script type="importmap">
 {
   "imports": {
-    "react-markdown": "https://aistudiocdn.com/react-markdown@^10.1.0",
-    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.30.0",
     "react/": "https://aistudiocdn.com/react@^19.2.0/",
     "react": "https://aistudiocdn.com/react@^19.2.0",
     "react-dom": "https://aistudiocdn.com/react-dom@^19.2.0",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
+    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.30.0",
     "vite": "https://aistudiocdn.com/vite@^7.2.4",
     "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.1",
-    "pdfjs-dist": "https://aistudiocdn.com/pdfjs-dist@^5.4.394",
-    "recharts": "https://aistudiocdn.com/recharts@^3.5.0",
+    "react-markdown": "https://aistudiocdn.com/react-markdown@^10.1.0",
     "date-fns": "https://aistudiocdn.com/date-fns@^4.1.0",
+    "recharts": "https://aistudiocdn.com/recharts@^3.5.0",
+    "@supabase/supabase-js": "https://aistudiocdn.com/@supabase/supabase-js@^2.85.0",
     "remark-gfm": "https://aistudiocdn.com/remark-gfm@^4.0.1",
-    "@supabase/supabase-js": "https://aistudiocdn.com/@supabase/supabase-js@^2.84.0"
+    "pdfjs-dist": "https://aistudiocdn.com/pdfjs-dist@^5.4.394"
   }
 }
 </script>
